--- a/furniture_app/pubspec.yaml
+++ b/furniture_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   gap: ^3.0.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
