--- a/furniture_app/pubspec.yaml
+++ b/furniture_app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   gap: ^3.0.1
   get: ^4.6.6
   flutter_vector_icons: ^2.0.0
+  flutter_slidable: ^3.1.0
 
 dev_dependencies:
   flutter_test:
