--- a/furniture_app/pubspec.yaml
+++ b/furniture_app/pubspec.yaml
@@ -41,6 +41,11 @@ dependencies:
   get: ^4.6.6
   flutter_vector_icons: ^2.0.0
   flutter_slidable: ^3.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  path_provider: ^2.1.3
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
