--- a/furniture_app/pubspec.yaml
+++ b/furniture_app/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   hive_generator: ^2.0.1
   path_provider: ^2.1.3
   shared_preferences: ^2.2.3
+  camera: ^0.10.5+9
 
 dev_dependencies:
   flutter_test:
